@@ -1,3 +1,8 @@
+2003-04-12  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* foomatic-perl-data.c, lib/Foomatic/DB.pm, foomatic-configure.in:
+	  Introduced string and password options.
+
 2003-04-02  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Introduced "Forced
